# pretty-log

./: .gitignore  BUILDING.md  CHANGELOG.md  CI_CD.md  Cargo.toml  HOMEBREW.md  HOMEBREW_SETUP.md  LICENSE  QUICK_RELEASE.md  README.md  README.zh-CN.md  VERSIONING.md
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: pretty-log.rb  pretty-log.rb.tmpl
docs/superpowers/plans/: 2026-04-01-pretty-log.md  2026-04-02-v0.0.3.md
docs/superpowers/specs/: 2026-04-01-pretty-log-design.md  2026-04-02-v0.0.3-design.md
src/: classifier.rs  config.rs  main.rs  parser.rs  reader.rs  renderer.rs  table.rs
tests/: integration.rs
