[package]
name = "pretty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pretty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
owo-colors = "4"
dirs = "5"
regex = "1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
