[package]
name = "pretty"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "pretty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
owo-colors = { version = "4", features = ["supports-colors"] }
dirs = "5"
regex = "1"
atty = "0.2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
